Fixed button on mobile devices

--- a/portf/everad/css/style.css
+++ b/portf/everad/css/style.css
@@ -3241,6 +3241,12 @@ b {
 		max-width: 600px;
 	}
 }
+@media all and (max-width: 639px) {
+	.registration .reg_box .registration_form .send_button {
+		width: 145px;
+		padding: 7px;
+	}
+}
 @media all and (max-width: 600px) {
 	#form_popup.activePopup {
 		width: 296px;
